--- a/landingpage.css
+++ b/landingpage.css
@@ -235,8 +235,9 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150px;
+    height: 100px;
     width: auto;
     background: #1f2937;
-    font-size: 15px;
+    color: #E5e7eb;
+    font-size: 18px;
 }
